three js transformation + group

--- a/basicScene/index.html
+++ b/basicScene/index.html
@@ -7,9 +7,9 @@
     <title>three js basic scene</title>
 </head>
 <body>
-    <canvas class="webg1"></canvas>
+    <canvas class="webg2"></canvas>
     <script src="./three.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./script1.js"></script>
     
 </body>
 </html>
